<resources>
    <string name="app_name">4.0UI</string>
    <string name="title_activity_sunshine_community">SunshineCommunityActivity</string>
    <string name="transition_book_img">transition_book_img</string>
    <string name="transition_news_img">transition_news_img</string>
    <string name="reporting_progress">报事处理进度</string>
    <string name="owner_reporting_things">业主报事</string>
    <string name="empty_data">暂无数据</string>
    <string name="empty_comment">暂无评论</string>
    <string name="comment">评价</string>
    <string name="service_team">服务团队</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mine_my_orders">我的订单</string>
    <string name="mine_my_fresh">我的生鲜</string>
    <string name="mine_feedback">反馈</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_my_join_activity">我参与的活动</string>
    <string name="mine_notices_set">设置</string>
    <string name="mine_my_join_topic">我参与的主题</string>
    <string name="mine_my_topic">我发表的主题</string>
    <string name="mine_my_coupons">我的优惠券</string>
    <string name="mine_my_cards">我的一卡通</string>
    <string name="logout">退出</string>
    <string name="family_name">姓氏</string>
</resources>
