<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!--title：报事处理进度-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/reporting_progress"
            android:textSize="@dimen/font_20"/>

        <!--分割线-->
        <include layout="@layout/common_line"/>

        <!--业主报事-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_reporting_things"/>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/font_10"
                android:background="@color/V4_F3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_data"/>


        </LinearLayout>

        <!--公共报事-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_reporting_things"/>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/font_10"
                android:background="@color/V4_F3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_data"/>


        </LinearLayout>


        <!--title:评价-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/comment"
            android:textSize="@dimen/font_20"/>

        <!--分割线-->
        <include layout="@layout/common_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/V4_F4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_comment"/>

            </LinearLayout>


        </RelativeLayout>

        <!--最底部：服务团队头像-->
        <include layout="@layout/block_sunshine_comment_people"/>

    </LinearLayout>


</ScrollView>